# Praxis_Cognito

./: codebook.py  create_env.sh  generate.sh  imitate.sh  log.md  main.py  pyproject.toml  requirements.txt  run_all.sh  train.sh  visualize.sh  visualizer.py
Model/: MoE.py  agent.py  decoder.py  encoder.py  fk.py  ptr.py  sd.py  vae.py
Online_func/: imitation.py
Pretrain/: dataset.py  generate_dataset.py  go2_env.py  go2_env_icm.py  go2_env_mjx.py  go2_env_primitives.py  go2_eval.py  go2_train.py  go2env_mjx.py  rl_config.py  train.py  train_dyn.py  util_class.py  utils.py
Pretrain/data/go2/demo/: walk.h5
Pretrain/output/g1 GMM/: vae_checkpoint_epoch_3.pth
Pretrain/output/g1 Hyperbolic/: vae_checkpoint_epoch_4.pth
Pretrain/output/go2 Gaussian/: vae_checkpoint_epoch_1.pth  vae_checkpoint_epoch_2.pth  vae_checkpoint_epoch_3.pth  vae_checkpoint_epoch_4.pth
Pretrain/primitives/go2-walking/: cfgs.pkl
Pretrain/urdfs/g1_description/: g1_29dof_rev_1_0_with_xhand.urdf  g1_29dof_rev_1_0_with_xhand_fixed.urdf  merge_g1_29dof_and_inspire_hand.ipynb
Pretrain/urdfs/g1_description/inspire_hand/: config.yaml
Pretrain/urdfs/g1_description/xhand_left_new/config/: joint_names_xhand_left.yaml
Pretrain/urdfs/g1_description/xhand_right_new/: CMakeLists.txt  package.xml
bak/: dataset.py  generate_dataset.py  train.py  vae.py
bak/Model/: decoder.py  encoder.py  vae_gmm.py  vae_poincare.py
conf/: g1.yaml  go2.yaml  go2bak.yaml  go2base.yaml  go2contact.yaml  go2hop.yaml  go2limb.yaml  go2loco.yaml  go2pose.yaml  go2v.yaml
(+6 files in other folders)
