[project]
name = "praxis-cognito"
version = "0.1.0"
description = "cuda 12.9 pytorch 2.8.0"
requires-python = ">=3.11"
dependencies = [
    "faiss-gpu-cu12>=1.11.0",
    "geoopt==0.5.1",
    "h5py==3.14.0",
    "hydra-core==1.3.2",
    "rsl-rl-lib==2.2.4",
    "scikit-learn>=1.7.1",
    "torch-geometric==2.6.1",
    "tensorboard",
    "tqdm==4.67.1",
    "numpy==1.26.4",
    "genesis_world==0.2.1",
]
